--- a/.github/workflows/testingworkflow.yaml
+++ b/.github/workflows/testingworkflow.yaml
@@ -15,7 +15,7 @@ jobs:
     - name: Modified files
       run: |
         git fetch origin main:feature2
-        git diff --name-only --diff-filter=d main~ feature2
+        git diff --name-only -r HEAD^1 HEAD
       
     - name: Run script
       run: bash files_changed.sh
