--- a/.github/workflows/testingworkflow.yaml
+++ b/.github/workflows/testingworkflow.yaml
@@ -17,7 +17,5 @@ jobs:
         git fetch origin main:feature2
         git diff --name-only -r HEAD^1 HEAD
       
-    - name: Run script
-      run: bash files_changed.sh
-    - name: 2nd sh file
+    - name: run sh file
       run: sh filesh.sh
