--- a/.github/workflows/mainbranch.yaml
+++ b/.github/workflows/mainbranch.yaml
@@ -13,10 +13,5 @@ jobs:
         fetch-depth: 0
 
     - name: Modified files
-      run: |
-        git log --pretty=format:"%h" origin/main..HEAD | while IFS= read -r commit_hash; do
-            echo "Commit: $commit_hash"
-            git show --stat --color=always $commit_hash
-            git show --color=always $commit_hash
-        done
+      run: sh filesh.sh
           
