--- a/.github/workflows/mainbranch.yaml
+++ b/.github/workflows/mainbranch.yaml
@@ -14,6 +14,6 @@ jobs:
 
     - name: Modified files
       run: |
-        git fetch origin main:feature2
+        git fetch origin main:main
         git diff --name-only -r HEAD^1 HEAD
           
