--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -1,3 +1,12 @@
+name: testing yaml linting
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
   lint:
     runs-on: ubuntu-latest
