--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
@@ -25,5 +25,6 @@ jobs:
         run: |
           pip install yamllint
 
-      - name: Lint YAML files
-        run: yamllint -c .yamllint .
+      - name: Automate Lint YAML files
+        run: |
+          ./lint_yaml.sh
