testing yaml lint rules

--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -27,5 +27,9 @@ jobs:
 
       - name: Automate Lint YAML files
         run: |
-          chmod +x yamllint-fix.sh
-          ./yamllint-fix.sh
+          yamllint -c .yamllint .
+          lint_exit_code=$?
+          
+          if [ $lint_exit_code -ne 0 ]; then
+            yamllint --fix -c .yamllint .
+          fi
