automate yaml lint errors

--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -35,5 +35,6 @@ jobs:
 
       - name: Fix YAML files
         if: ${{ failure() }}
+        needs: lint_yaml
         run: |
           python fix_yaml.py
