automate yaml lint errors

--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -33,8 +33,16 @@ jobs:
           yamllint -c .yamllint .
         continue-on-error: true
 
+      # - name: Fix YAML files
+      #   if: ${{ failure() }}
+      #   needs: lint_yaml
+      #   run: |
+      #     python fix_yaml.py
+      - name: Set linting success
+        if: steps.lint_yaml.outcome == 'success'
+        run: echo "::set-output name=lint_success::true"
+
       - name: Fix YAML files
-        if: ${{ failure() }}
-        needs: lint_yaml
+        if: steps.lint_yaml.outcome == 'failure' || steps.set-lint-success.outputs.lint_success == 'true'
         run: |
           python fix_yaml.py
