--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -47,6 +47,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          git checkout ${{ github.ref }}
           git add .
           git commit -m "automate yaml lint errors-auto commit"
           git push
