automate yaml lint errors

--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -47,7 +47,11 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git checkout ${{ github.ref }}
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            git checkout "refs/heads/${{ github.head_ref }}"
+          else
+            git checkout ${{ github.ref }}
+          fi
           git add .
           git commit -m "automate yaml lint errors-auto commit"
           git push
