--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -45,8 +45,8 @@ jobs:
       - name: Commit and push changes
         if: steps.lint_yaml.outcome == 'failure' || steps.set-lint-success.outputs.lint_success == 'true'
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "narasimhatati"
+          git config --global user.email "narasimhatati1993@gmail.com"
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             git checkout "refs/heads/${{ github.head_ref }}"
           else
