automate yaml lint errors

--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -49,7 +49,7 @@ jobs:
           git config --global user.email "narasimhatati1993@gmail.com"
           git fetch
           if [ "${{ github.event_name }}" = "pull_request" ]; then
-            git checkout "refs/heads/${{ github.head_ref }}"
+            git checkout autofix-lintissues
           else
             git checkout ${{ github.ref }}
           fi
