--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -47,8 +47,8 @@ jobs:
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          git config --global user.name "narasimhatati"
-          git config --global user.email "narasimhatati1993@gmail.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git fetch
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             git checkout autofix-lintissues
