--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v4
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
