automate yaml lint errors

--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -50,8 +50,8 @@ jobs:
       
       - name: Commit and push changes
         if: steps.lint_yaml.outcome == 'failure' || steps.set-lint-success.outputs.lint_success == 'true'
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        with:
+          github_token: ${{ secrets.PAT_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
@@ -64,3 +64,8 @@ jobs:
           git add .
           git commit -m "automate yaml lint errors-auto commit"
           git push origin HEAD
+      - name: Push Changes
+        uses: actions/checkout@v4
+        with:
+          github_token: ${{ secrets.PAT_TOKEN }}
+          branch: autofix-lintissues
