--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -66,5 +66,5 @@ jobs:
         uses: actions/checkout@v4
         with:
           github_token: ${{ secrets.PAT_TOKEN }}
-          branch: autofix-lintissues
+          branch: main
 
