automate yaml lint errors

--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -48,7 +48,10 @@ jobs:
           chmod +x yamllint-fix.sh
           ./yamllint-fix.sh
 #          python fix_yaml.py
-      
+      - name: Push Changes
+        uses: actions/checkout@v4
+        with:
+          github_token: ${{ secrets.PAT_TOKEN }}
       - name: Commit and push changes
         if: steps.lint_yaml.outcome == 'failure' || steps.set-lint-success.outputs.lint_success == 'true'
         run: |
@@ -62,10 +65,8 @@ jobs:
           fi
           git add .
           git commit -m "automate yaml lint errors-auto commit"
-          git push origin HEAD
-      - name: Push Changes
-        uses: actions/checkout@v4
-        with:
-          github_token: ${{ secrets.PAT_TOKEN }}
-          branch: main
-
+          git push origin HEAD:${{ github.head_ref }}
+      # - name: Push Changes
+      #   uses: actions/checkout@v4
+      #   with:
+      #     github_token: ${{ secrets.PAT_TOKEN }}
