--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -57,7 +57,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git fetch
           if [ "${{ github.event_name }}" = "pull_request" ]; then
-            git checkout ${{ github.head_ref }}
+            git checkout HEAD:${{ github.head_ref }}
           else
             git checkout ${{ github.ref }}
           fi
