--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -55,13 +55,13 @@ jobs:
           git config --global user.email "actions@github.com"
           git fetch
           if [ "${{ github.event_name }}" = "pull_request" ]; then
-            git checkout HEAD:${{ github.head_ref }}
+            git checkout ${{ github.head_ref }}
           else
             git checkout ${{ github.ref }}
           fi
           git add .
           git commit -m "automate yaml lint errors-auto commit"
-          git push origin HEAD:${{ github.head_ref }}
+          git push origin ${{ github.head_ref }}
       # - name: Push Changes
       #   uses: actions/checkout@v4
       #   with:
