--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -8,7 +8,9 @@ on:
   pull_request:
     branches:
       - main
-
+env:
+  ACTIONS_STEP_DEBUG: true 
+  
 jobs:
   lint:
     runs-on: ubuntu-latest
