--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -8,9 +8,12 @@ on:
   pull_request:
     branches:
       - main
-env:
-  ACTIONS_STEP_DEBUG: true 
-  
+  workflow_dispatch:
+    branches:
+      - main
+
+permissions:
+    contents: write
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -55,7 +58,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git fetch
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             git checkout ${{ github.head_ref }}
           else
@@ -63,7 +65,7 @@ jobs:
           fi
           git add .
           git commit -m "automate yaml lint errors-auto commit"
-#          git push origin ${{ github.head_ref }}
+          git push
       - name: Push Changes
         uses: actions/checkout@v4
         with:
