--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -66,7 +66,7 @@ jobs:
           git add .
           git commit -m "automate yaml lint errors-auto commit"
           git push
-      - name: Push Changes
-        uses: actions/checkout@v4
-        with:
-          github_token: ${{ secrets.PAT_TOKEN }}
+      # - name: Push Changes
+      #   uses: actions/checkout@v4
+      #   with:
+      #     github_token: ${{ secrets.PAT_TOKEN }}
