--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -56,6 +56,9 @@ jobs:
 
       - name: Commit and push changes
         if: steps.lint_yaml.outcome == 'failure' || steps.set-lint-success.outputs.lint_success == 'true'
+        with:
+          paths-ignore:
+            - ".github/workflows/yaml-linting.yaml"
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
