--- a/.github/workflows/yaml-linting.yaml
+++ b/.github/workflows/yaml-linting.yaml
@@ -25,8 +25,7 @@ jobs:
         with:
           github_token: ${{ secrets.PAT_TOKEN }}
           fetch-depth: 1
-          paths-ignore:
-            - '.github/workflows/yaml-linting.yaml'
+          paths-ignore: "./.github/workflows/yaml-linting.yaml"
             
       - name: Set up Python
         uses: actions/setup-python@v5
